# jace-the-bot

./: .gitignore  chat_test.py  database.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  readme.md
gatherer/: __init__.py  config.py  endpoints.py  main.py
jace/: config.py  config.yml  constants.py  database.py  generators.py  main.py  utils.py
notebooks/: all_sets_fetch.ipynb  chunking_rules.py  dict_test.py  jace_cards_test.ipynb  llama_parse.py  long_running.py  rich_samples.py  rich_walrus.py  rules_exploration.py  sryfall_cards_test.ipynb  the_heck.py
scratch/: command_pattern_sample.py  generators_v2.py  strong_concat.py
scripts/mssql/: init_setup.sql
scryfall/: __init__.py  config.py  endpoints.py  main.py  models.py
src/gatherer/: config.py  endpoints.py  main.py
src/jace/: config.py  database.py  generators.py  main.py
src/scryfall/: __init__.py  config.py  endpoints.py  main.py
tests/: test_gatherer.py  test_scryfall.py
