[tool.poetry]
name = "jace-the-bot"
version = "0.1.0"
description = ""
authors = ["SirCaptainMitch <hamann.mitchell@gmail.com>"]
readme = "README.md"
packages = [{include = "jace_the_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
pydantic = "^2.0.3"
pandas = "^2.0.1"
brotli = "^1.0.9"
pytest = "^7.3.1"
ujson = "^5.7.0"
pygpt4all = "^1.1.0"
unstructured = "^0.8.1"
rich = "^13.4.2"
gpt4all = "^1.0.5"
typer = "^0.9.0"
duckdb = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
