[tool.poetry]
name = "jace-the-bot"
version = "0.1.0"
description = ""
authors = ["SirCaptainMitch <hamann.mitchell@gmail.com>"]
readme = "README.md"
packages = [{include = "jace"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
pydantic = "^2.0.3"
pandas = "^2.0.1"
brotli = "^1.0.9"
pytest = "^7.3.1"
ujson = "^5.7.0"
unstructured = "^0.8.1"
rich = "^13.4.2"
griptape = "^0.14.6"
griptape-tools = "^0.16.3"
gpt4all = "^1.0.5"
httpx = "^0.24.1"
typer = "^0.9.0"
duckdb = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
