[tool.poetry]
name = "jace-the-bot"
version = "0.1.0"
description = ""
authors = ["SirCaptainMitch <hamann.mitchell@gmail.com>"]
readme = "README.md"
packages = [{include = "jace"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.30.0"
pydantic = "^2.0.3"
pandas = "^2.0.1"
brotli = "^1.0.9"
pytest = "^8.3.4"
ujson = "^5.7.0"
unstructured = "^0.16.16"
rich = "^13.4.2"
httpx = "^0.28.1"
typer = "^0.15.1"
duckdb = "^1.1.3"
omegaconf = "^2.3.0"
duckdb-engine = "^0.15.0"
jupyter = "^1.1.1"
notebook = "^7.3.2"
jupysql = "^0.10.17"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
